--- a/Capstone Notes.ipynb
+++ b/Capstone Notes.ipynb
@@ -2609,6 +2609,129 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "![image](https://user-images.githubusercontent.com/77416319/152268337-4cf39516-2179-46c8-8686-df451f4b2889.png)\n",
+    "\n",
+    "![image](https://user-images.githubusercontent.com/77416319/152268429-3a63a262-3ed1-4a95-abee-f9565f1cbce0.png)\n",
+    "\n",
+    "![image](https://user-images.githubusercontent.com/77416319/152268477-f85bd096-e32c-4801-ab1e-acb354613c35.png)\n",
+    "\n",
+    "![image](https://user-images.githubusercontent.com/77416319/152268533-1d75d9d9-fbf8-451c-87d9-4e1043b3e25c.png)\n",
+    "\n",
+    "![image](https://user-images.githubusercontent.com/77416319/152268569-742adc80-abbd-4ea4-8351-dcbcf71b5835.png)\n",
+    "\n",
+    "![image](https://user-images.githubusercontent.com/77416319/152268645-18993f49-ba59-4b88-8e8f-7061046d8a00.png)\n",
+    "\n",
+    "![image](https://user-images.githubusercontent.com/77416319/152268709-38f35140-891e-495e-9edd-be3facfac8af.png)\n",
+    "\n",
+    "![image](https://user-images.githubusercontent.com/77416319/152268793-8c38caff-d036-42c2-9f93-84fe94008e08.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_clf = GridSearchCV(XGBoost_model, param_grid, scoring='accuracy', cv=None, n_jobs=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_parameters = grid_clf2.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_clf = GridSearchCV(XG_lem, param_grid)\n",
+    "run_model(grid_clf, X_lem, y_lem)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_clf = GridSearchCV(XG_lem, param_grid)\n",
+    "grid_clf.fit(tfidf_data_train_lem, y_train_lem)\n",
+    "\n",
+    "best_parameters = grid_clf.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Grid Search found the following optimal parameters: ')\n",
+    "for param_name in sorted(best_parameters.keys()):\n",
+    "    print('%s: %r' % (param_name, best_parameters[param_name]))\n",
+    "\n",
+    "training_preds = grid_clf.predict(tfidf_data_train_lem)\n",
+    "test_preds = grid_clf.predict(tfidf_data_test_lem)\n",
+    "training_accuracy = accuracy_score(y_train_lem, training_preds)\n",
+    "test_accuracy = accuracy_score(y_test_lem, test_preds)\n",
+    "\n",
+    "print('')\n",
+    "print('Training Accuracy: {:.4}%'.format(training_accuracy * 100))\n",
+    "print('Validation accuracy: {:.4}%'.format(test_accuracy * 100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_grid2 = {\n",
+    "    'learning_rate': [0.1, 0.2],\n",
+    "    'max_depth': [20],\n",
+    "    'min_child_weight': [1, 2],\n",
+    "    'subsample': [0.5, 0.7],\n",
+    "    'n_estimators': [100],\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_clf2 = GridSearchCV(XG_lem, param_grid2, scoring='accuracy', cv=10, n_jobs=1)\n",
+    "grid_clf2.fit(tfidf_data_train_lem, y_train_lem)\n",
+    "\n",
+    "best_parameters = grid_clf2.best_params_\n",
+    "\n",
+    "print('Grid Search found the following optimal parameters: ')\n",
+    "for param_name in sorted(best_parameters.keys()):\n",
+    "    print('%s: %r' % (param_name, best_parameters[param_name]))\n",
+    "\n",
+    "training_preds = grid_clf2.predict(tfidf_data_train_lem)\n",
+    "test_preds = grid_clf2.predict(tfidf_data_test_lem)\n",
+    "training_accuracy = accuracy_score(y_train_lem, training_preds)\n",
+    "test_accuracy = accuracy_score(y_test_lem, test_preds)\n",
+    "\n",
+    "print('')\n",
+    "print('Training Accuracy: {:.4}%'.format(training_accuracy * 100))\n",
+    "print('Validation accuracy: {:.4}%'.format(test_accuracy * 100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
